# glideMediaGallary

./: LICENSE  README.md  implementation_plan.md  package.json  task.md
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  scanner.rs
src/lib/components/: MediaPlayer.svelte  Thumbnail.svelte  VirtualGrid.svelte
src/routes/: +page.svelte
