[package]
name = "glide"
version = "0.1.0"
description = "Ultra-fast portable media gallery"
authors = ["MasterKN48 <masterkn48@gmail.com>"]
homepage = "https://github.com/MasterKN48/glideMediaGallary"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Glide"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8"
rayon = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
kamadak-exif = "0.6"
tauri-plugin-dialog = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Enable link-time optimization
codegen-units = 1       # Reduce codegen units to increase optimization potential
panic = "abort"         # Abort on panic to remove unwinding code size
strip = true            # Strip symbols and debug info from the final binary

